# udever

./: AUR_UPDATE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: check_readme_syntax.py
src/: main.rs
