[package]
name = "udever"
version = "0.1.0"
authors = ["lazytatzv"]
edition = "2024"
description = "Interactive udev rule generator for Linux (mainly support Arch based)"
license = "MIT"
repository = "https://github.com/lazytatzv/udever"
readme = "README.md"
keywords = ["udev", "usb", "linux", "cli"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.4"
console = "0.16.2"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
libc = "0.2.180"
nix = { version = "0.31.1", features = ["user"] }
os-release = "0.1.0"
