[package]
name = "udever"
version = "0.2.4"
authors = ["lazytatzv"]
edition = "2024" 
description = "Interactive udev rule generator for Linux. Stop writing rules by hand."
license = "MIT"
repository = "https://github.com/lazytatzv/udever"
homepage = "https://github.com/lazytatzv/udever"
documentation = "https://docs.rs/udever"
readme = "README.md"

keywords = ["udev", "usb", "linux", "cli", "embedded"]

categories = ["command-line-utilities", "os::linux-apis", "embedded"]

exclude = [
    ".github",
    ".gitignore",
    "images/*",
    "tests/*",
    "*.sh"
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.4"
console = "0.16"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
libc = "0.2"
nix = { version = "0.31", features = ["user"] }
os-release = "0.1"

[profile.release]
opt-level = 3       
lto = true          
codegen-units = 1   
strip = true        
panic = "abort"     
